# Stereo-reconstruct-pose

./: README.md  base_environment.yml  calc_match_mostrecent.py  calc_match_person1and2.py  stereo_camera_calibration.py
Stereo-reconstruct-C++/: calc_match_new.cpp
Stereo-reconstruct-C++/tflite/pose_stereovision/: CMakeLists-og.txt  CMakeLists.txt  deep_ssim.cpp  main.cpp  main_save.cpp  main_sgbm.cpp  main_temp_save.cpp  opencv481.cpp  opencv481.h
Stereo-reconstruct-C++/tflite/pose_stereovision/deep_ssim/: ImageCompare.cpp  ImageCompare.hpp
Stereo-reconstruct-C++/tflite/pose_stereovision/detection/: detection.cpp  detection.hpp
Stereo-reconstruct-C++/tflite/pose_stereovision/lib/: common_types.hpp  intersection.cpp  intersection.hpp  post_processing.cpp  post_processing.hpp  triangulation.cpp  triangulation.hpp
Stereo-reconstruct-C++/tflite/pose_stereovision/movenet/: movenet.cpp  movenet.hpp
Stereo-reconstruct-Python/: README.md  calc_match_oldmethod.py  demo_matchbymag_center2_jan23demo.py  demo_matchbymag_collect5.py  demo_matchbymag_new_7frames_new2method_new.py  mono_camera_calibration.py  temp_for_C++.py
Stereo-reconstruct-Python/LIGHT/: light.py
Stereo-reconstruct-Python/THUNDER/: thunder.py
Stereo-reconstruct-Python/core/: camera_params.py
Stereo-reconstruct-Python/demo/: chessboard.py
Stereo-reconstruct-Python/scripts/: mono_camera_calibration.sh  stereo_camera_calibration.sh
YOLOV8/: yolov8.py
calib-new/: debug.txt
core/: rectification.py  stereo_matcher.py
core/utils/: file_storage.py  file_utils.py  (+1 more)
grab_video/: grab.py
(+1 files in other folders)
